# gemmit

./: .gitignore  GEMINI.md  LICENSE.md  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: gitleaks.yml  python-lint.yml  test.yml
gemmit/: config.json  gemmit  gemmit.py
gemmit/commands/: generate.py
gemmit/core/: ai.py  config.py  git.py
gemmit/utils/: errors.py
gemmits/: config.json  gemmits.py
src/: config.json  gemmit  gemmit-hook  gemmit.py
src/commands/: generate.py
src/core/: ai.py  config.py  git.py
src/utils/: errors.py
tests/: conftest.py  test_ai.py  test_config.py  test_generate_command.py  test_git.py  test_integration.py
