[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemmit"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
description = "A tool to generate commit messages using AI."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    
    "rich==13.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.5.5",
]

[project.scripts]
gemmit = "gemmit.gemmit:main"
